tools/tests/ui/fail/l1096.cnf
// Test file for error code: L1096
// Expected error: Underflow VIDEO-MP4 character in division structure -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-underflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
